[tool.poetry]
name = "org-and-me"
version = "0.1.0"
description = ""
authors = ["d0gied <german.n.u@mail.ru>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "3.1.1"
poetry-dotenv-plugin = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
